@@ -8,17 +8,19 @@ import by.bsuir.tattooparlor.entity.helpers.UserRole;
 import by.bsuir.tattooparlor.util.*;
 import by.bsuir.tattooparlor.util.calculator.ICalculationsManager;
 import by.bsuir.tattooparlor.util.exception.NoClientPresentedException;
+import by.bsuir.tattooparlor.util.exception.NoDiscountPresentedException;
 import by.bsuir.tattooparlor.util.exception.UtilException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.multipart.MultipartFile;
 
 import javax.servlet.http.HttpSession;
+import java.io.IOException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Controller
 public class OrderController {
@@ -28,15 +30,17 @@ public class OrderController {
     private final IOrderManager orderManager;
     private final ITattooMasterManager masterManager;
     private final ICalculationsManager calculationsManager;
+    private final IDiscountManager discountManager;
     private final IAuthService userManager;
 
     @Autowired
-    public OrderController(IClientManager clientManager, IProductManager productManager, IOrderManager orderManager, ITattooMasterManager masterManager, ICalculationsManager calculationsManager, IAuthService userManager) {
+    public OrderController(IClientManager clientManager, IProductManager productManager, IOrderManager orderManager, ITattooMasterManager masterManager, ICalculationsManager calculationsManager, IDiscountManager discountManager, IAuthService userManager) {
         this.clientManager = clientManager;
         this.productManager = productManager;
         this.orderManager = orderManager;
         this.masterManager = masterManager;
         this.calculationsManager = calculationsManager;
+        this.discountManager = discountManager;
         this.userManager = userManager;
     }
 
@@ -67,6 +71,7 @@ public class OrderController {
                              @RequestParam(name = "dateTime") String dateTime,
                              @RequestParam(name = "contactPhone") String contactPhone,
                              @RequestParam(name = "clientName") String clientName,
+                             @RequestParam(name = "promocode") String promocode,
                              HttpSession session,
                              Model model) {
         Order order = (Order) session.getAttribute("currentOrder");
@@ -75,7 +80,13 @@ public class OrderController {
         }
 
         try {
-            Client client = userManager.applyGuest(clientName, contactPhone).orElseThrow(NoClientPresentedException::new);
+            User currentUser = (User) session.getAttribute("currentUser");
+            Client client = null;
+            if (currentUser == null) {
+                client = userManager.applyGuest(clientName, contactPhone).orElseThrow(NoClientPresentedException::new);
+            } else {
+                client = ((Client) session.getAttribute("currentClient"));
+            }
             TattooMaster master = null;
             if (masterId == 0) {
                 master = masterManager.findPrior();
@@ -89,6 +100,19 @@ public class OrderController {
             Product product = order.getProduct();
             product.setColorsCount(colorsCount);
             int totalCost = calculationsManager.getTotalCost(product, master, imageSize);
+
+            try {
+                if (!promocode.isEmpty()) {
+                    ClientDiscount discount = discountManager.findByPromoForClient(client, promocode);
+                    order.setDiscount(discount);
+                    int reducedCost = (int) (totalCost * ((100.0 - discount.getDiscount().getPercentage()) / 100.0));
+                    model.addAttribute("reducedCost", reducedCost);
+                    model.addAttribute("discount", discount);
+                }
+            } catch (NoDiscountPresentedException ex) {
+                ex.printStackTrace();
+            }
+
             order.setPrice(totalCost);
             session.setAttribute("currentOrder", order);
             session.setAttribute("currentClient", client);
@@ -170,7 +194,7 @@ public class OrderController {
             previouslyCompletedByMaster = completedByMaster
                     .stream()
                     .filter(order -> order.getDateTime().before(new Date()))
-                    .toList();
+                    .collect(Collectors.toList());
 
             completedByMaster.removeAll(previouslyCompletedByMaster);
         }
@@ -193,24 +217,83 @@ public class OrderController {
         if(!acceptedByMaster.isEmpty()) {
             acceptedByMaster.sort(Comparator.comparing(Order::getDateTime));
         }
+        List<TattooMaster> masters = masterManager.findAll();
+        model.addAttribute("masters", masters);
         model.addAttribute("orders", mapToDateOrdered(acceptedByMaster));
         return "schedule2";
     }
 
     @RequestMapping("/updateOrderStatus")
     public String updateOrderStatus(@RequestParam(name = "id") int orderId,
-                                    @RequestParam(name = "orderStatus") OrderStatus orderStatus,
-                              HttpSession session) {
+                                    @RequestParam(name = "masterId") int masterId,
+                                    @RequestParam(name = "priceAccepted") int priceAccepted,
+                                    HttpSession session) {
         User currentUser = (User) session.getAttribute("currentUser");
-        if (currentUser.getRole() == UserRole.CLIENT) {
+        if (currentUser.getRole() != UserRole.MODERATOR) {
             return "redirect:/";
         }
         try {
-            orderManager.updateOrderStatus(orderId, orderStatus);
+            Order order = orderManager.findById(orderId);
+            TattooMaster currentMaster = (TattooMaster) session.getAttribute("currentMaster");
+            if(masterId == 0) {
+                order.setOrderStatus(OrderStatus.REJECTED);
+            } else if(masterId == currentMaster.getId()) {
+                order.setPrice(priceAccepted);
+                order.setOrderStatus(OrderStatus.ACCEPTED);
+            } else {
+                TattooMaster master = masterManager.findById(masterId);
+                order.setMaster(master);
+            }
+
+            orderManager.saveOrder(order);
         } catch (UtilException ex) {
             ex.printStackTrace();
         }
         return "redirect:/scheduleNew";
+    }
+
+    @RequestMapping("/updateOrder")
+    public String updateOrder(@RequestParam(name = "orderId") int orderId,
+                              @RequestParam(name = "datetime", required = false) String dateTime,
+                              @RequestParam(name = "contactPhone", required = false) String contactPhone,
+                              @RequestParam(name = "totalCost", required = false) Integer totalCost,
+                              @RequestParam(name = "completedImage", required = false) MultipartFile multipartFile,
+                              @RequestParam(name = "orderStatus") OrderStatus orderStatus,
+                              HttpSession session) {
+        User currentUser = (User) session.getAttribute("currentUser");
+        if (currentUser.getRole() != UserRole.MODERATOR) {
+            return "redirect:/";
+        }
+        try {
+            Order order = orderManager.findById(orderId);
+
+            if (dateTime != null && !dateTime.isEmpty()) {
+                order.setDateTime(DateUtils.dateTimeFromHtmlString(dateTime));
+            }
+            if (contactPhone != null && !contactPhone.isEmpty()) {
+                order.setContactPhone(contactPhone);
+            }
+            if (totalCost != null && totalCost != 0) {
+                order.setPrice(totalCost);
+            }
+
+            if (multipartFile != null) {
+                String fileName = FileUtils.getNewPictureUri(
+                        Integer.toHexString(multipartFile.getName().hashCode() + new Date().hashCode()),
+                        multipartFile.getContentType().replace("/", "."));
+
+                FileUtils.trySaveNewPictureByPath(multipartFile, fileName);
+                Product product = order.getProduct();
+                product.setCompletedImageUri(fileName);
+            }
+
+            order.setOrderStatus(orderStatus);
+
+            orderManager.saveOrder(order);
+        } catch (UtilException | IOException ex) {
+            ex.printStackTrace();
+        }
+        return "redirect:/schedule";
     }
 
     public Map<String, List<Order>> mapToDateOrdered(List<Order> orders) {
